# hnet-experiments

./: .gitignore  CLAUDE.md  README.md  hnet_jax.py  hnet_jax_single.py  hnet_pytorch_single.py  hnet_standalone.py  hnet_torch.py  modal_hnet_comparison.py  pyproject.toml
.claude/: settings.local.json
src/hnet/: __init__.py  cli.py  config.py  generate.py  generation.py  hnet_jax.py  lm.py  loading.py  mamba_jax.py  model.py  routing.py  stack.py  state.py  tokenizer.py  utils.py
src/hnet/models/: config_hnet.py  hnet.py  mixer_seq.py
src/hnet/modules/: __init__.py  block.py  cache.py  chunking.py  config.py  isotropic.py  mamba2.py  mha.py  mlp.py  norms.py  rotary.py  ssm.py  swiglu.py  utils.py
src/hnet/tests/: test_cache_management.py  test_cache_system.py  test_chunking.py  test_cross_validation.py  test_generation_pipeline.py  test_hnet.py  test_isotropic.py  test_mamba2.py  test_mha.py  test_rotary.py  test_rotary_jax.py  test_swiglu.py  test_utils.py
